--- a/apps/Cargo.toml
+++ b/apps/Cargo.toml
@@ -6,6 +6,13 @@ edition = { workspace = true }
 [dependencies]
 alloy-primitives = { workspace = true }
 alloy-sol-types = { workspace = true }
+alloy = { version = "0.2.1", features = [
+    "full"
+] }
+futures-util = "0.3"
+eyre = "0.6"
+serde = "1.0"
+serde_json = "1.0"
 anyhow = { workspace = true }
 clap = { version = "4.0", features = ["derive", "env"] }
 env_logger = { version = "0.10" }
