--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/imt"]
 	path = lib/imt
 	url = https://github.com/hmzakhalid/imt
+[submodule "lib/poseidon-solidity"]
+	path = lib/poseidon-solidity
+	url = https://github.com/chancehudson/poseidon-solidity
