--- a/apps/Cargo.toml
+++ b/apps/Cargo.toml
@@ -6,9 +6,7 @@ edition = { workspace = true }
 [dependencies]
 alloy-primitives = { workspace = true }
 alloy-sol-types = { workspace = true }
-alloy = { version = "0.2.1", features = [
-    "full"
-] }
+alloy = { version = "0.2.1", features = ["full"] }
 zk-kit-imt = "0.0.5"
 futures-util = "0.3"
 eyre = "0.6"
@@ -26,3 +24,9 @@ tokio = { version = "1.35", features = ["full"] }
 fhe = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
 fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
 rand = "0.8"
+sha3 = "0.10.8"
+num-bigint = "0.4"
+num-traits = "0.2"
+poseidon-rs = "0.0.10"
+ff = { package = "ff_ce", version = "0.11", features = ["derive"] }
+hex = "0.4"
