--- a/apps/Cargo.toml
+++ b/apps/Cargo.toml
@@ -27,6 +27,7 @@ rand = "0.8"
 sha3 = "0.10.8"
 num-bigint = "0.4"
 num-traits = "0.2"
-poseidon-rs = "0.0.10"
-ff = { package = "ff_ce", version = "0.11", features = ["derive"] }
 hex = "0.4"
+light-poseidon = "0.2.0"
+ark-ff = "0.4.2"
+ark-bn254 = "0.4.0"
