--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -13,6 +13,7 @@ path = "src/bin/is_even.rs"
 alloy-primitives = { version = "0.6", default-features = false, features = ["rlp", "serde", "std"] }
 alloy-sol-types = { version = "0.6" }
 risc0-zkvm = { version = "1.0", default-features = false, features = ['std'] }
+vcs-core = { path = "../../core" }
 
 [profile.release]
 lto = "thin"
