--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "lib/poseidon-solidity"]
 	path = lib/poseidon-solidity
 	url = https://github.com/chancehudson/poseidon-solidity
+[submodule "lib/zk-kit.solidity"]
+	path = lib/zk-kit.solidity
+	url = https://github.com/privacy-scaling-explorations/zk-kit.solidity
