--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -5,3 +5,6 @@ edition.workspace = true
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
+fhe = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
+fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
+fhe-util = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
