--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -8,3 +8,11 @@ serde = { version = "1.0", features = ["derive"] }
 fhe = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
 fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
 fhe-util = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
+lean-imt = "0.1.0"
+sha3 = "0.10.8"
+num-bigint = "0.4"
+num-traits = "0.2"
+hex = "0.4"
+light-poseidon = "0.2.0"
+ark-ff = "0.4.2"
+ark-bn254 = "0.4.0"
